--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<jexl.version>2.1.1</jexl.version>
 		<commons-lang.version>2.3</commons-lang.version>
 		<mockito.version>1.10.19</mockito.version>
+		<log4j.version>1.2.16</log4j.version>
 		<junit.version>4.12</junit.version>
 	</properties>
 
@@ -62,6 +63,14 @@
 			<version>${jaxb.version}</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>${log4j.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.powermock</groupId>
