--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-jar-plugin</artifactId>
+						<version>2.6</version>
 						<configuration>
 							<outputDirectory>D:\SoftwareAG\IntegrationServer\instances\default\lib\jars</outputDirectory>
 						</configuration>
