--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<jaxb.version>2.2.7</jaxb.version> <!-- Must match jaxb2-maven-plugin dep version -->
 		<wm-aop-util.version>1.0.0-SNAPSHOT</wm-aop-util.version>
 		<commons-loggin.version>1.1.1</commons-loggin.version>
-		<is.server.lib.dir>D:\SoftwareAG\IntegrationServer\instances\default\lib\jars</is.server.lib.dir>
+		<is.server.lib.dir>G:\SoftwareAG\IntegrationServer\instances\default\lib\jars</is.server.lib.dir>
 	</properties>
 
 	<dependencies>
