--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,13 @@
 	</parent>
 
 	<name>wm-aop</name>
-	<url>https://bitbucket.org/sysgen/wm-aop.git</url>
+	<url>https://github.com/wmaop/wm-aop</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<wm-aop-util.version>1.0.0-SNAPSHOT</wm-aop-util.version>
 		<jaxb.version>2.2.7</jaxb.version> <!-- Must match jaxb2-maven-plugin dep version -->
 		<commons-loggin.version>1.1.1</commons-loggin.version> <!-- JEXL version for exclusion -->
-		<is.server.lib.dir>D:\SoftwareAG\IntegrationServer\instances\default\lib\jars</is.server.lib.dir>
 	</properties>
 
 	<dependencies>
