--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.wmaop</groupId>
 		<artifactId>wm-parent</artifactId>
-		<version>1.0.3-SNAPSHOT</version>
+		<version>1.0.5</version>
 	</parent>
 
 	<name>wm-aop</name>
@@ -37,7 +37,7 @@
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<wm-aop-util.version>1.0.0-SNAPSHOT</wm-aop-util.version>
+		<wm-aop-util.version>1.0.0</wm-aop-util.version>
 		<jaxb.version>2.2.7</jaxb.version> <!-- Must match jaxb2-maven-plugin dep version -->
 		<commons-logging.version>1.1.1</commons-logging.version> <!-- JEXL version for exclusion -->
 		<apache.axis2.version>1.6.2</apache.axis2.version>
