--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,8 @@
 		<commons-logging.version>1.1.1</commons-logging.version> <!-- JEXL version for exclusion -->
 		<apache.axis2.version>1.6.2</apache.axis2.version>
 		<javax.mail.version>1.4.4</javax.mail.version>
+		
+		<maven.javadoc.skip>true</maven.javadoc.skip>
 	</properties>
 
 	<dependencies>
