--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 		<commons-logging.version>1.1.1</commons-logging.version> <!-- JEXL version for exclusion -->
 		<apache.axis2.version>1.6.2</apache.axis2.version>
 		<javax.mail.version>1.4.4</javax.mail.version>
+		<jexl.version>2.1.1</jexl.version>
 		
 		<maven.javadoc.skip>true</maven.javadoc.skip>
 	</properties>
@@ -56,6 +57,11 @@
 			<groupId>org.wmaop</groupId>
 			<artifactId>wm-aop-util</artifactId>
 			<version>${wm-aop-util.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-jexl</artifactId>
+			<version>${jexl.version}</version>
 		</dependency>
 
 		<dependency>
