--- a/src/main/resources/config/invokemanager.cnf
+++ b/src/main/resources/config/invokemanager.cnf
@@ -3,7 +3,7 @@
 <IDataXMLCoder version="1.0">
   <record javaclass="com.wm.data.ISMemDataImpl">
     <array name="processorArray" type="value" depth="1">
-      <value>org.wmaop.aop.chainprocessor.AOPChainProcessor</value>
+      <value>org.wmaop.chainprocessor.AOPChainProcessor</value>
     </array>
   </record>
 </IDataXMLCoder>
