--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,8 @@
 	<scm>
 		<url>https://github.com/wmaop/wm-aop</url>
 		<connection>scm:git:git://github.com/wmaop/wm-aop.git</connection>
-      <tag>wm-aop-1.0.0</tag>
+		<developerConnection>scm:git:sysgen@github.com:wmaop/wm-aop.git</developerConnection>
+        <tag>wm-aop-1.0.2</tag>
   </scm>
 
 	<developers>
