--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 
 	<licenses>
 		<license>
-			<name>GNU General Public License, Version 3</name>
-			<url>http://www.gnu.org/licenses/gpl-3.0.html</url>
+			<name>The MIT License (MIT)</name>
+			<url>https://opensource.org/licenses/MIT</url>
 			<distribution>manual</distribution>
 		</license>
 	</licenses>
