--- a/pom.xml
+++ b/pom.xml
@@ -53,22 +53,10 @@
 		<jexl.version>3.0</jexl.version>
 
 		<maven.javadoc.skip>true</maven.javadoc.skip>
+
+		<swagger.doc.dir>${project.build.directory}/markdown</swagger.doc.dir>
 	</properties>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>jcenter-snapshots</id>
-			<name>jcenter</name>
-			<url>http://oss.jfrog.org/artifactory/oss-snapshot-local/</url>
-		</pluginRepository>
-		<pluginRepository>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<id>jcenter-releases</id>
-			<name>jcenter</name>
-			<url>http://jcenter.bintray.com</url>
-		</pluginRepository>
-	</pluginRepositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.wmaop</groupId>
@@ -193,18 +181,6 @@
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>io.github.swagger2markup</groupId>
-				<artifactId>swagger2markup-maven-plugin</artifactId>
-				<version>1.0.1</version>
-				<configuration>
-					<swaggerInput>${project.basedir}/src/docs/swagger/swagger_wmaop.yaml</swaggerInput>
-					<outputDir>${project.build.directory}/markdown</outputDir>
-					<config>
-						<swagger2markup.markupLanguage>MARKDOWN</swagger2markup.markupLanguage>
-					</config>
-				</configuration>
-			</plugin>
 			<!-- Plugin required to build java classes from XSD using XJC -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -244,6 +220,70 @@
 	</build>
 
 	<profiles>
+		<profile>
+			<id>swagger2doc</id>
+			<pluginRepositories>
+				<pluginRepository>
+					<id>jcenter-snapshots</id>
+					<name>jcenter</name>
+					<url>http://oss.jfrog.org/artifactory/oss-snapshot-local/</url>
+				</pluginRepository>
+				<pluginRepository>
+					<snapshots>
+						<enabled>false</enabled>
+					</snapshots>
+					<id>jcenter-releases</id>
+					<name>jcenter</name>
+					<url>http://jcenter.bintray.com</url>
+				</pluginRepository>
+			</pluginRepositories>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>io.github.swagger2markup</groupId>
+						<artifactId>swagger2markup-maven-plugin</artifactId>
+						<version>1.0.1</version>
+						<configuration>
+							<swaggerInput>${project.basedir}/src/docs/swagger/swagger_wmaop.yaml</swaggerInput>
+							<outputDir>${swagger.doc.dir}</outputDir>
+							<config>
+								<swagger2markup.markupLanguage>MARKDOWN</swagger2markup.markupLanguage>
+								<swagger2markup.generatedExamplesEnabled>false</swagger2markup.generatedExamplesEnabled>
+							</config>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>concatSwaggerDoc</id>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<version>1.8</version>
+						<executions>
+							<execution>
+								<id>default-cli</id>
+								<phase>process-resources</phase>
+								<goals>
+									<goal>run</goal>
+								</goals>
+								<configuration>
+									<target>
+										<concat destfile="${swagger.doc.dir}/wmaop-API.md" force="yes">
+											<filelist dir="${swagger.doc.dir}" files="overview.md,paths.md,definitions.md"/>
+										</concat>
+
+									</target>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
 		<profile>
 			<id>localServer</id>
 			<build>
