Correct incorrect dependency on snapshot

--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 	</developers>
 
 	<properties>
-		<wm-aop-util.version>1.1.1-SNAPSHOT</wm-aop-util.version>
+		<wm-aop-util.version>1.1.0</wm-aop-util.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jaxb.version>2.2.7</jaxb.version> <!-- Must match jaxb2-maven-plugin dep version -->
