--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>wm-aop</artifactId>
-	<version>1.1.2-SNAPSHOT</version>
+	<version>1.1.2</version>
 	<packaging>jar</packaging>
 
 	<parent>
@@ -32,7 +31,7 @@
 		<url>https://github.com/wmaop/wm-aop</url>
 		<connection>scm:git:git://github.com/wmaop/wm-aop.git</connection>
 		<developerConnection>scm:git:git@github.com:wmaop/wm-aop.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>wm-aop-1.1.2</tag>
 	</scm>
 
 	<developers>
@@ -260,7 +259,7 @@
 								<configuration>
 									<target>
 										<concat destfile="${swagger.doc.dir}/wmaop-API.md" force="yes">
-											<filelist dir="${swagger.doc.dir}" files="overview.md,paths.md,definitions.md"/>
+											<filelist dir="${swagger.doc.dir}" files="overview.md,paths.md,definitions.md" />
 										</concat>
 
 									</target>
