--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 	</developers>
 
 	<properties>
-		<wm-aop-util.version>1.1.4</wm-aop-util.version>
+		<wm-aop-util.version>1.1.5-SNAPSHOT</wm-aop-util.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jaxb.version>2.2.7</jaxb.version> <!-- Must match jaxb2-maven-plugin dep version -->
